@@ -7,8 +7,8 @@ public class Dictionary {
 
     int maxSize;
 
-    Map <ArrayOfBytes, Integer> m;
-    List <ArrayOfBytes> l; 
+    Map <ByteArray, Integer> m;
+    List <ByteArray> l; 
 
     // Constructora diccionari de tamany limitat
     Dictionary (int maxSize) {
@@ -18,23 +18,23 @@ public class Dictionary {
     }
 
     // Afegeix un element al diccionari
-    public void add (ArrayOfBytes s) {
+    public void add (ByteArray s) {
         if (size() < maxSize) {
-            m.put(s, new Integer(l.size()));
+            m.put(s, Integer.valueOf(l.size()));
             l.add(s);
         }
     }
 
     // Obté el nombre de la cadena de bytes str, si no existeix retorna -1
-    public int getNumStr (ArrayOfBytes s) {
+    public int getNumStr (ByteArray s) {
         return (m.containsKey(s) ? 
                 ((Integer)m.get(s)).intValue() : -1);
     }
 
     // Obté la cadena de bytes del nombre n, si no existeix retorna -1
-    public ArrayOfBytes getStrNum (int n) {
+    public ByteArray getStrNum (int n) {
         return (n < l.size() ? 
-                (ArrayOfBytes) l.get(n) : null);
+                (ByteArray) l.get(n) : null);
     }
 
     public int size () {
